--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,7 @@ bin/qwe.json
 bin/sql/api_sql/test.sql
 templates/test.html
 *.osz
+add_sets/bin/config.py
+add_sets/run.py
+bin/sql/test.sql
+bin/sql/test2.sql
