--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,8 @@ add_sets/bin/config.py
 add_sets/run.py
 bin/sql/test.sql
 bin/sql/test2.sql
+static/css/download.css
+static/css/index.css
+static/css/index.css
+static/vue/pages/index.js
+templates/download.html
